hphp/hack/test/typecheck/shape/idx_optional_nothing_key.php.exp
ERROR: File "idx_optional_nothing_key.php", line 4, characters 26-28:
You are calling `Shapes::idx()` on a field known to not exist (Typing[4251])
  File "Shapes.hhi", line 42, characters 19-24:
  The type of the field `a` in this shape doesn't allow any values
  File "idx_optional_nothing_key.php", line 4, characters 18-20:
  It is nothing because type parameter `Tv` of `idx` could not be determined. Please add explicit type parameters to the invocation of `idx`
  File "Shapes.hhi", line 42, characters 19-24:
    via this generic `Tv`
