hphp/hack/test/typecheck/shape/idx_optional_nothing_key.php
<?hh

function main(): void {
  $s ==> Shapes::idx($s, 'a');
}
